--- a/1.md
+++ b/1.md
@@ -1,8 +1,8 @@
 
 
-##     						<center>十人结拜</center><br/>&emsp;&emsp;维大宋国山东东平府清河县信士西门庆、应伯爵、谢希大、花子虚、孙天化、祝念实、云理守、吴典恩、常峙节、白赉光等，是日沐手焚香请旨。伏为桃园义重，众心仰慕而敢效其风；管鲍情深，各姓追维而欲同其志。况四海皆可兄弟，岂异姓不如骨肉？是以涓今政和年月日，营备猪羊牲礼，鸾驭金资，瑞叩斋坛，虔诚请祷，拜投昊天金阙玉皇上帝，五方值日功曹，本县城隍社令，过往一切神衹，仗此真香，普同鉴察。伏念庆等生虽异日，死冀同时，期盟言之永固；安乐与共，颠沛相扶，思缔结以常新。必富贵常念贫穷，乃始终有所依倚。情共日往以月来，谊若天高而地厚。伏愿自盟以后，相好无尤，更祈人人增有永之年，户户庆无疆之福。凡在时中，全叨覆庇，谨疏。	
+#####     						<center>十人结拜</center><br/>&emsp;&emsp;维大宋国山东东平府清河县信士西门庆、应伯爵、谢希大、花子虚、孙天化、祝念实、云理守、吴典恩、常峙节、白赉光等，是日沐手焚香请旨。伏为桃园义重，众心仰慕而敢效其风；管鲍情深，各姓追维而欲同其志。况四海皆可兄弟，岂异姓不如骨肉？是以涓今政和年月日，营备猪羊牲礼，鸾驭金资，瑞叩斋坛，虔诚请祷，拜投昊天金阙玉皇上帝，五方值日功曹，本县城隍社令，过往一切神衹，仗此真香，普同鉴察。伏念庆等生虽异日，死冀同时，期盟言之永固；安乐与共，颠沛相扶，思缔结以常新。必富贵常念贫穷，乃始终有所依倚。情共日往以月来，谊若天高而地厚。伏愿自盟以后，相好无尤，更祈人人增有永之年，户户庆无疆之福。凡在时中，全叨覆庇，谨疏。	
 
-## 		 　																	<p align="right">政和年月日文疏</p>
+##### 		 　																	<p align="right">政和年月日文疏</p>
 
 ---
 
